<resources>
    <string name="app_name">Trivia App</string>
    <string name="title">Trivia</string>
    <string name="false_button">FALSE</string>
    <string name="true_button">TRUE</string>
    <string name="previous_button">previous_button</string>
    <string name="next_button">next_button</string>
    <string name="counter_question">0 out of 100</string>
    <string name="correct_toast">You are correct!!</string>
    <string name="wrong_toast">You are wrong!</string>
    <string name="current_score_0">Current Score : 0</string>
    <string name="high_score">High Score : </string>
    <string name="high_score_0">High Score : 0</string>
</resources>